@@ -7,7 +7,6 @@
   "footer.next": "Nächste Seite",
   "meta.comments": "Kommentare",
   "meta.source": "Quellcode",
-  "search.languages": "de",
   "search.placeholder": "Suche",
   "search.result.placeholder": "Suchbegriff eingeben",
   "search.result.none": "Keine Suchergebnisse",
